@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,8 +21,6 @@
  * questions.
  */
 
-import java.io.PrintStream;
-
 /*
  * @test
  *
@@ -42,8 +40,8 @@ import java.io.PrintStream;
  *     Fixed the 5004632 bug.
  *
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} mentry01.java
- * @run main/othervm/native --enable-preview -agentlib:mentry01 mentry01
+ * @compile mentry01.java
+ * @run main/othervm/native -agentlib:mentry01 mentry01
  */
 
 
@@ -51,14 +49,7 @@ import java.io.PrintStream;
 public class mentry01 {
 
     static {
-        try {
-            System.loadLibrary("mentry01");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load mentry01 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("mentry01");
     }
 
     static volatile int result;
