@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,9 +24,10 @@
 /**
  * @test
  * @summary Verifies setting a breakpoint in Continuation.yield() followed by single stepping
+ * @requires vm.continuations
  * @compile ContYieldBreakPointTest.java
  * @modules java.base/jdk.internal.vm
- * @run main/othervm/native --enable-preview -agentlib:ContYieldBreakPointTest ContYieldBreakPointTest
+ * @run main/othervm/native -agentlib:ContYieldBreakPointTest ContYieldBreakPointTest
  */
 
 import jdk.internal.vm.Continuation;
