@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Verifies that MethodExit events are delivered on both carrier and virtual threads.
- * @compile --enable-preview -source ${jdk.version} MethodExitTest.java
- * @run main/othervm/native --enable-preview -agentlib:MethodExitTest -Djdk.defaultScheduler.parallelism=2 MethodExitTest 150
+ * @requires vm.continuations
+ * @compile MethodExitTest.java
+ * @run main/othervm/native -agentlib:MethodExitTest -Djdk.defaultScheduler.parallelism=2 MethodExitTest 150
  */
 
 import java.util.concurrent.*;
