@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Verifies JVMTI RawMoitor functions works correctly on virtual threads
- * @compile --enable-preview -source ${jdk.version} RawMonitorTest.java
- * @run main/othervm/native --enable-preview -agentlib:RawMonitorTest RawMonitorTest
+ * @requires vm.continuations
+ * @compile RawMonitorTest.java
+ * @run main/othervm/native -agentlib:RawMonitorTest RawMonitorTest
  */
 
 import java.util.List;
