@@ -28,16 +28,14 @@
  *          jdk.compiler/com.sun.tools.javac.parser
  *          jdk.compiler/com.sun.tools.javac.tree
  *          jdk.compiler/com.sun.tools.javac.util
- * @compile --enable-preview -source ${jdk.version} DisambiguatePatterns.java
- * @run main/othervm --enable-preview DisambiguatePatterns
  */
 
 import com.sun.source.tree.CaseLabelTree;
 import com.sun.source.tree.ClassTree;
 import com.sun.source.tree.CompilationUnitTree;
-import com.sun.source.tree.ExpressionTree;
+import com.sun.source.tree.ConstantCaseLabelTree;
 import com.sun.source.tree.MethodTree;
-import com.sun.source.tree.PatternTree;
+import com.sun.source.tree.PatternCaseLabelTree;
 import com.sun.source.tree.SwitchTree;
 import com.sun.tools.javac.file.JavacFileManager;
 import com.sun.tools.javac.parser.JavacParser;
@@ -55,11 +53,11 @@ public class DisambiguatePatterns {
                                  ExpressionType.PATTERN);
         test.disambiguationTest("String s when s.isEmpty()",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("(String s)",
+        test.disambiguationTest("String s",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("(@Ann String s)",
+        test.disambiguationTest("@Ann String s",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("((String s))",
+        test.disambiguationTest("String s",
                                  ExpressionType.PATTERN);
         test.disambiguationTest("(String) s",
                                  ExpressionType.EXPRESSION);
@@ -79,7 +77,7 @@ public class DisambiguatePatterns {
                                  ExpressionType.EXPRESSION);
         test.disambiguationTest("(a << b || a < b | a >>> b)",
                                  ExpressionType.EXPRESSION);
-        test.disambiguationTest("(a < c.d > b)",
+        test.disambiguationTest("a < c.d > b",
                                  ExpressionType.PATTERN);
         test.disambiguationTest("a<? extends c.d> b",
                                  ExpressionType.PATTERN);
@@ -139,8 +137,8 @@ public class DisambiguatePatterns {
         SwitchTree st = (SwitchTree) method.getBody().getStatements().get(0);
         CaseLabelTree label = st.getCases().get(0).getLabels().get(0);
         ExpressionType actualType = switch (label) {
-            case ExpressionTree et -> ExpressionType.EXPRESSION;
-            case PatternTree pt -> ExpressionType.PATTERN;
+            case ConstantCaseLabelTree et -> ExpressionType.EXPRESSION;
+            case PatternCaseLabelTree pt -> ExpressionType.PATTERN;
             default -> throw new AssertionError("Unexpected result: " + result);
         };
         if (expectedType != actualType) {
