@@ -31,7 +31,12 @@
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.platform
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
+ *          java.base/jdk.internal.classfile
+ *          java.base/jdk.internal.classfile.attribute
+ *          java.base/jdk.internal.classfile.constantpool
+ *          java.base/jdk.internal.classfile.instruction
+ *          java.base/jdk.internal.classfile.components
+ *          java.base/jdk.internal.classfile.impl
  *          jdk.jdeps/com.sun.tools.javap
  * @build toolbox.ToolBox ElementStructureTest
  * @run main ElementStructureTest
@@ -93,8 +98,7 @@ import javax.tools.StandardLocation;
 import javax.tools.ToolProvider;
 
 import com.sun.source.util.JavacTask;
-import com.sun.tools.classfile.ClassFile;
-import com.sun.tools.classfile.ConstantPoolException;
+import jdk.internal.classfile.Classfile;
 import com.sun.tools.javac.api.JavacTaskImpl;
 import com.sun.tools.javac.code.Symbol.CompletionFailure;
 import com.sun.tools.javac.platform.PlatformProvider;
@@ -128,16 +132,16 @@ public class ElementStructureTest {
         (byte) 0xB7, (byte) 0x52, (byte) 0x0F, (byte) 0x68
     };
     static final byte[] hash7 = new byte[] {
-        (byte) 0x45, (byte) 0xCA, (byte) 0x83, (byte) 0xCD,
-        (byte) 0x1A, (byte) 0x68, (byte) 0x57, (byte) 0x9C,
-        (byte) 0x6F, (byte) 0x2D, (byte) 0xEB, (byte) 0x28,
-        (byte) 0xAB, (byte) 0x05, (byte) 0x53, (byte) 0x6E
+        (byte) 0x2C, (byte) 0x01, (byte) 0xC0, (byte) 0xFB,
+        (byte) 0xD5, (byte) 0x66, (byte) 0x0D, (byte) 0x9C,
+        (byte) 0x09, (byte) 0x17, (byte) 0x2F, (byte) 0x5A,
+        (byte) 0x3D, (byte) 0xC1, (byte) 0xFE, (byte) 0xCB
     };
     static final byte[] hash8 = new byte[] {
-        (byte) 0x26, (byte) 0x8C, (byte) 0xFD, (byte) 0x61,
-        (byte) 0x53, (byte) 0x00, (byte) 0x57, (byte) 0x10,
-        (byte) 0x36, (byte) 0x2B, (byte) 0x92, (byte) 0x0B,
-        (byte) 0xE1, (byte) 0x6A, (byte) 0xB5, (byte) 0xFD
+        (byte) 0x10, (byte) 0xE6, (byte) 0xE8, (byte) 0x11,
+        (byte) 0xC8, (byte) 0x02, (byte) 0x63, (byte) 0x9B,
+        (byte) 0xAB, (byte) 0x11, (byte) 0x9E, (byte) 0x4F,
+        (byte) 0xFA, (byte) 0x00, (byte) 0x6D, (byte) 0x81
     };
 
     final static Map<String, byte[]> version2Hash = new HashMap<>();
@@ -213,14 +217,11 @@ public class ElementStructureTest {
                         return;
                     StringBuilder targetPattern;
                     switch (line.charAt(0)) {
-                        case '+':
-                            targetPattern = acceptPattern;
-                            break;
-                        case '-':
-                            targetPattern = rejectPattern;
-                            break;
-                        default:
-                            return ;
+                        case '+' -> targetPattern = acceptPattern;
+                        case '-' -> targetPattern = rejectPattern;
+                        default -> {
+                            return;
+                        }
                     }
                     line = line.substring(1);
                     if (line.endsWith("/")) {
@@ -256,7 +257,7 @@ public class ElementStructureTest {
 
     void run(Writer output, String version) throws Exception {
         List<String> options = Arrays.asList("--release", version, "-classpath", "");
-        List<ToolBox.JavaSource> files = Arrays.asList(new ToolBox.JavaSource("Test", ""));
+        List<ToolBox.JavaSource> files = List.of(new ToolBox.JavaSource("Test", ""));
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         JavacTaskImpl task = (JavacTaskImpl) compiler.getTask(null, null, null, options, null, files);
 
@@ -288,10 +289,10 @@ public class ElementStructureTest {
                 }
                 JavaFileObject file = new ByteArrayJavaFileObject(data.toByteArray());
                 try (InputStream in = new ByteArrayInputStream(data.toByteArray())) {
-                    String name = ClassFile.read(in).getName().replace("/", ".");
+                    String name = Classfile.of().parse(in.readAllBytes()).thisClass().name().stringValue();
                     className2File.put(name, file);
                     file2ClassName.put(file, name);
-                } catch (IOException | ConstantPoolException ex) {
+                } catch (IOException ex) {
                     throw new IllegalStateException(ex);
                 }
             }
@@ -484,7 +485,7 @@ public class ElementStructureTest {
                 return null;
             try {
                 analyzeElement(e);
-                out.write(String.valueOf(e.getConstantValue()));
+                writeConstant(e.getConstantValue());
                 out.write("\n");
             } catch (IOException ex) {
                 ex.printStackTrace();
@@ -512,6 +513,16 @@ public class ElementStructureTest {
         @Override
         public Void visitUnknown(Element e, Void p) {
             throw new IllegalStateException("Should not get here.");
+        }
+
+        private void writeConstant(Object value) throws IOException {
+            if (value instanceof Double) {
+                out.write(Double.toHexString((Double) value));
+            } else if (value instanceof Float) {
+                out.write(Float.toHexString((Float) value));
+            } else {
+                out.write(String.valueOf(value));
+            }
         }
 
     }
